@@ -40,8 +40,8 @@ import javax.annotation.Nullable;
  * import com.pulumi.signalfx.DetectorArgs;
  * import com.pulumi.signalfx.inputs.DetectorRuleArgs;
  * import com.pulumi.codegen.internal.KeyedValue;
- * import java.util.List;
  * import java.util.ArrayList;
+ * import java.util.Arrays;
  * import java.util.Map;
  * import java.io.File;
  * import java.nio.file.Files;
@@ -54,7 +54,7 @@ import javax.annotation.Nullable;
  * 
  *     public static void stack(Context ctx) }{{@code
  *         final var config = ctx.config();
- *         final var clusters = config.get("clusters").orElse(List.of(        
+ *         final var clusters = config.get("clusters").orElse(Arrays.asList(        
  *             "clusterA",
  *             "clusterB"));
  *         for (var i = 0; i < clusters.length(); i++) }{{@code
